--- a/11장 페인터 프로젝트/painter_main.html
+++ b/11장 페인터 프로젝트/painter_main.html
@@ -8,17 +8,17 @@
     <script src="./js/app/painter_main.js"></script>
     <script src="./js/view/painter_view.js"></script>
     <script src="./js/view/panel/tool_button_panel.js"></script>
+    <script src="./js/model/painter_model.js"></script>
+    <script src="./js/model/piece/line_piece.js"></script>
+    <script src="./js/model/piece/rectangle_piece.js"></script>
 
     <script>
       window.onload = function () {
-        let painterMain = new PAINTER.app.PainterMain();
+        let painterMain = new PAINTER.app.PainterMain("painter");
       };
     </script>
   </head>
   <body>
-    <div id="painter">
-      <div id="toolbar"></div>
-      <canvas id="mycanvas"></canvas>
-    </div>
+    <div id="painter"></div>
   </body>
 </html>
