11장 페인터 프로젝트 6장 진행

--- a/11장 페인터 프로젝트/painter_main.html
+++ b/11장 페인터 프로젝트/painter_main.html
@@ -9,8 +9,10 @@
     <script src="./js/view/painter_view.js"></script>
     <script src="./js/view/panel/tool_button_panel.js"></script>
     <script src="./js/model/painter_model.js"></script>
+    <script src="./js/model/piece/abstract_piece.js"></script>
     <script src="./js/model/piece/line_piece.js"></script>
     <script src="./js/model/piece/rectangle_piece.js"></script>
+    <script src="./js/model/piece/ellipse_piece.js"></script>
 
     <script>
       window.onload = function () {
