11장 페인터 프로젝트 10장 진행

--- a/11장 페인터 프로젝트/painter_main.html
+++ b/11장 페인터 프로젝트/painter_main.html
@@ -13,6 +13,7 @@
     <script src="./js/model/piece/line_piece.js"></script>
     <script src="./js/model/piece/rectangle_piece.js"></script>
     <script src="./js/model/piece/ellipse_piece.js"></script>
+    <script src="./js/model/piece/free_path_piece.js"></script>
 
     <script>
       window.onload = function () {
