11장 페인터 프로젝트 15장 MVC 패턴 적용

--- a/11장 페인터 프로젝트/painter_main.html
+++ b/11장 페인터 프로젝트/painter_main.html
@@ -14,6 +14,8 @@
     <script src="./js/model/piece/rectangle_piece.js"></script>
     <script src="./js/model/piece/ellipse_piece.js"></script>
     <script src="./js/model/piece/free_path_piece.js"></script>
+    <script src="./js/model/struct/point.js"></script>
+    <script src="./js/controller/painter_controller.js"></script>
 
     <script>
       window.onload = function () {
