11장 페인터 프로젝트 16장 Observer 패턴 적용

--- a/11장 페인터 프로젝트/painter_main.html
+++ b/11장 페인터 프로젝트/painter_main.html
@@ -16,6 +16,8 @@
     <script src="./js/model/piece/free_path_piece.js"></script>
     <script src="./js/model/struct/point.js"></script>
     <script src="./js/controller/painter_controller.js"></script>
+    <script src="./js/controller/observer/ipainter_observer.js"></script>
+    <script src="./js/controller/observer/ipainter_subject.js"></script>
 
     <script>
       window.onload = function () {
