12장 게임 프로젝트 4,5 장 진행 MVC 패턴 적용

--- a/12장 게임 프로젝트/game_main.html
+++ b/12장 게임 프로젝트/game_main.html
@@ -13,9 +13,12 @@
     <script src="./js/model/game_model.js"></script>
     <script src="./js/model/sprite/abstract_sprite.js"></script>
     <script src="./js/model/sprite/rectangle_sprite.js"></script>
+    <script src="./js/model/sprite/ellipse_sprite.js"></script>
 
     <script src="./js/view/game_view.js"></script>
     <script src="./js/view/pannel/toolbar_panel.js"></script>
+
+    <script src="./js/controller/game_controller.js"></script>
 
     <script>
       window.onload = function () {
