--- a/12장 게임 프로젝트/game_main.html
+++ b/12장 게임 프로젝트/game_main.html
@@ -14,11 +14,13 @@
     <script src="./js/model/sprite/abstract_sprite.js"></script>
     <script src="./js/model/sprite/rectangle_sprite.js"></script>
     <script src="./js/model/sprite/ellipse_sprite.js"></script>
+    <script src="./js/model/sprite/image_sprite.js"></script>
 
     <script src="./js/view/game_view.js"></script>
     <script src="./js/view/pannel/toolbar_panel.js"></script>
 
     <script src="./js/controller/game_controller.js"></script>
+    <script src="./js/controller/repository/image_repository.js"></script>
 
     <script>
       window.onload = function () {
