--- a/12장 게임 프로젝트/game_main.html
+++ b/12장 게임 프로젝트/game_main.html
@@ -15,6 +15,7 @@
     <script src="./js/model/sprite/rectangle_sprite.js"></script>
     <script src="./js/model/sprite/ellipse_sprite.js"></script>
     <script src="./js/model/sprite/image_sprite.js"></script>
+    <script src="./js/model/sprite/label_sprite.js"></script>
 
     <script src="./js/view/game_view.js"></script>
     <script src="./js/view/pannel/toolbar_panel.js"></script>
