--- a/12장 게임 프로젝트/game_main.html
+++ b/12장 게임 프로젝트/game_main.html
@@ -22,6 +22,7 @@
 
     <script src="./js/controller/game_controller.js"></script>
     <script src="./js/controller/repository/image_repository.js"></script>
+    <script src="./js/controller/factory/sprite_factory.js"></script>
 
     <script>
       window.onload = function () {
