12장 게임 프로젝트 10장 Composite Pattern 적용

--- a/12장 게임 프로젝트/game_main.html
+++ b/12장 게임 프로젝트/game_main.html
@@ -17,6 +17,9 @@
     <script src="./js/model/sprite/image_sprite.js"></script>
     <script src="./js/model/sprite/label_sprite.js"></script>
 
+    <script src="./js/model/sprite/abstract_composite_sprite.js"></script>
+    <script src="./js/model/sprite/airplane_composite_sprite.js"></script>
+
     <script src="./js/view/game_view.js"></script>
     <script src="./js/view/pannel/toolbar_panel.js"></script>
 
