12장 게임 프로젝트 11장 Abstract Factory 적용

--- a/12장 게임 프로젝트/game_main.html
+++ b/12장 게임 프로젝트/game_main.html
@@ -25,7 +25,11 @@
 
     <script src="./js/controller/game_controller.js"></script>
     <script src="./js/controller/repository/image_repository.js"></script>
+
     <script src="./js/controller/factory/sprite_factory.js"></script>
+    <script src="./js/controller/factory/abstract_enemy_factory.js"></script>
+    <script src="./js/controller/factory/ellipse_enemy_factory.js"></script>
+    <script src="./js/controller/factory/rectangle_enemy_factory.js"></script>
 
     <script>
       window.onload = function () {
