12장 게임 프로젝트 12장 Strategy 적용

--- a/12장 게임 프로젝트/game_main.html
+++ b/12장 게임 프로젝트/game_main.html
@@ -20,6 +20,11 @@
     <script src="./js/model/sprite/abstract_composite_sprite.js"></script>
     <script src="./js/model/sprite/airplane_composite_sprite.js"></script>
 
+    <script src="./js/model/action/abstract_sprite_action.js"></script>
+    <script src="./js/model/action/fade_in_action.js"></script>
+    <script src="./js/model/action/fade_out_action.js"></script>
+    <script src="./js/model/action/move_by_action.js"></script>
+
     <script src="./js/view/game_view.js"></script>
     <script src="./js/view/pannel/toolbar_panel.js"></script>
 
