--- a/12장 게임 프로젝트/game_main.html
+++ b/12장 게임 프로젝트/game_main.html
@@ -28,6 +28,9 @@
     <script src="./js/view/game_view.js"></script>
     <script src="./js/view/pannel/toolbar_panel.js"></script>
 
+    <script src="./js/controller/scene/igame_context.js"></script>
+    <script src="./js/controller/scene/igame_scene.js"></script>
+
     <script src="./js/controller/game_controller.js"></script>
     <script src="./js/controller/repository/image_repository.js"></script>
 
@@ -35,6 +38,12 @@
     <script src="./js/controller/factory/abstract_enemy_factory.js"></script>
     <script src="./js/controller/factory/ellipse_enemy_factory.js"></script>
     <script src="./js/controller/factory/rectangle_enemy_factory.js"></script>
+
+    <script src="./js/controller/scene/impl_game_scene.js"></script>
+    <script src="./js/controller/scene/config_game_scene.js"></script>
+    <script src="./js/controller/scene/menu_game_scene.js"></script>
+    <script src="./js/controller/scene/play_game_scene.js"></script>
+    <script src="./js/controller/scene/result_game_scene.js"></script>
 
     <script>
       window.onload = function () {
